First draft at using kvc for lustre-client